# mcp_project_example

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
api/: generate.sh  requirements.txt  start_server.sh  swagger.json
api/client/: README.md  pyproject.toml  requirements.txt  setup.py
api/client/docs/: PetApi.md  StoreApi.md
api/client/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
api/client/openapi_client/api/: pet_api.py  store_api.py  user_api.py
api/client/openapi_client/models/: __init__.py  api_response.py  category.py  order.py  pet.py  tag.py  user.py
api/client/test/: conftest.py  test_pet_api.py  test_store_api.py  test_user_api.py
api/server/: setup.py
api/server/openapi_server/: __main__.py  store.py
api/server/openapi_server/controllers/: pet_controller.py  store_controller.py  user_controller.py
api/server/openapi_server/openapi/: openapi.yaml
api/server/openapi_server/test/: test_store_controller.py  test_user_controller.py
evaluation/: expected.json  input.json  models.py  report_viewer.py  run_eval.py
mcp/client/: client.py  mcp_client.py  requirements.txt
mcp/server/: requirements.txt  server.py  tool_descriptions.py
shared/: __init__.py
shared/api/: api_server_manager.py
shared/model/: mcp_client.py
webapp/: app.py  requirements.txt
